styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
:root {
    --gray: #dadddf;
    --blue: #1996e6;
    --white: #fff;
}
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body {
    min-height: 100vh;
    font-family: 'Roboto', sans-serif;
    font-size: 0.9rem;
}
.container {
    height: 100%;
    display: grid;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: 170px 700px;
}
.header {
    grid-column: 2 / -1;
    grid-row: 1 / 2;
    display: grid;
    grid-template-rows: 1fr 1fr;
    padding: 10px 40px;
    box-shadow: 0px 3px 2px rgba(0,0,0,.2);
}
.nav {
    grid-row: 1 / 2;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.search-bar {
    display: flex;
    gap: 13px;
}
#search-input {
    outline: none;
    border: none;
    width: 600px;
    padding: 8px 20px;
    border-radius: 20px;
    background-color: var(--gray);
}
.account {
    display: flex;
    align-items: center;
    gap: 17px;
}
.account .photo {
    height: 50px;
    width: 50px;
    background: url('images/doge.jpg');
    background-size: cover;
    background-position: center;
    border-radius: 50%;
}
.tools {
    grid-row: 2 / -1;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.profile {
    display: flex;
    align-items: center;
    gap: 17px;
}
.profile .photo {
    height: 70px;
    width: 70px;
    background: url('images/doge.jpg');
    background-size: cover;
    background-position: center;
    border-radius: 50%;
}
.btns {
    display: flex;
    gap: 17px;
}
.btn {
    background-color: var(--blue);
    color: #fff;
    width: 90px;
    text-align: center;
    padding-top: 8px;
    padding-bottom: 8px;
    font-weight: 500;
    border-radius: 20px;
}
.sidebar {
    grid-column: 1 / 2;
    grid-row: 1 / -1;
    background: var(--blue);
    display: grid;
    grid-template-rows: 100px 1fr 1fr 100px;
    padding-left: 20px;
    color: var(--white);
    gap: 30px;
}
.logo {
    grid-row: 1 / 2;
    display: flex;
    align-items: center;
    gap: 10px;
    font-size: 14px;
}
.sidebar-tools-1 {
    grid-row: 2 / 3;
    display: grid;
    grid-template-rows: repeat(6, 40px);
}
.sidebar-tools-2 {
    grid-row: 3 / 4;
    display: grid;
    grid-template-rows: repeat(6, 1fr);
}
.tool {
    display: flex;
    align-items: center;
    gap: 20px;
    font-size: 18px;
}
.fa-solid {
    font-size: 20px;
}
.main-content {
    grid-column: 2 / -1;
    grid-row: 2 / -1;
    display: grid;
    grid-template-columns: 1fr 200px;
    grid-template-rows: 1fr 1fr;
    padding-right: 20px;
    padding-left: 20px;
    padding-top: 35px;
    gap: 13px;
    background: #FEF08A;
}
.projects {
    grid-column: 1 / 2;
    grid-row: 1 / 3;
}
.projects > h3 {
    margin-bottom: 10px;
}
.cards {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 15px;
}
.card {
    border-radius: 10px;
    background: #fff;
    height: 160px;
    padding: 20px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-shadow: 3px 5px rgba(0,0,0,.2)
}
.card-icons {
    display: flex;
    justify-content: flex-end;
    gap: 13px;
}
.announces {
    grid-column: 2 / -1;
    grid-row: 1 / 2;
}
.announces > h4 {
    margin-bottom: 10px;
}
.announce-card {
    border-radius: 10px;
    padding: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background: #fff;
    box-shadow: 3px 5px rgba(0,0,0,.2)
}
.trending {
    grid-column: 2 / -1;
    grid-row: 2 / -1;
}
.trending > h4 {
    margin-bottom: 10px;
}
.trending-card {
    border-radius: 10px;
    padding: 15px;
    background: #fff;
    box-shadow: 3px 5px rgba(0,0,0,.2)
}
.trending-profile {
    display: flex;
    gap: 10px;
    align-items: center;
}
.trending-profile-text {
    font-size: 11px;
}
.profile-name {
    font-weight: 500;
}
.photo-1, .photo-2, .photo-3, .photo-4 {
    height: 50px;
    width: 50px;
    border-radius: 50%;
}
.photo-1 {
    background: url("assets/pexels-pixabay-162140.jpg");
    background-size: cover;
    background-position: center;
}
.photo-2 {
    background: url("assets/pexels-pixabay-255435.jpg");
    background-size: cover;
    background-position: center;
}
.photo-3 {
    background: url("assets/pexels-pixabay-39317.jpg"); 
    background-size: cover;
    background-position: center;
}
.photo-4 {
    background: url("assets/pexels-tetyana-kovyrina-1692984.jpg");
    background-size: cover;
    background-position: center;
}

